--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <!--  TODO: 为什么要带public文件夹 -->
-    <link rel="icon" type="image/svg+xml" href="public/favicon.ico" />
+    <!--  TODO: 为什么不带public文件夹不生效呢 -->
+    <link rel="icon" type="image/svg+xml" href="favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Nike - Woking</title>
   </head>
